crates/end_model/tests/ui/cross_catalog_item_id.stderr
error[E0521]: borrowed data escapes outside of closure
  --> tests/ui/cross_catalog_item_id.rs:45:21
   |
42 |     with_catalog("ore-1", "bank-1", |catalog_1, ore_1| {
   |                                                 ----- `ore_1` declared here, outside of the closure body
43 |         with_catalog("ore-2", "bank-2", |catalog_2, _| {
   |                                          --------- `catalog_2` is a reference that is only valid in the closure body
44 |             let _ = catalog_1;
45 |             let _ = item_name(&catalog_2, ore_1);
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `catalog_2` escapes the closure body here
   |
   = note: requirement occurs because of the type `ItemId<'_>`, which makes the generic argument `'_` invariant
   = note: the struct `ItemId<'id>` is invariant over the parameter `'id`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance

error[E0521]: borrowed data escapes outside of closure
  --> tests/ui/cross_catalog_item_id.rs:45:21
   |
42 |     with_catalog("ore-1", "bank-1", |catalog_1, ore_1| {
   |                                      ---------
   |                                      |
   |                                      `catalog_1` is a reference that is only valid in the closure body
   |                                      has type `Catalog<'1>`
...
45 |             let _ = item_name(&catalog_2, ore_1);
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                     |
   |                     `catalog_1` escapes the closure body here
   |                     argument requires that `'1` must outlive `'static`
